updated lithium standard to skip app/resources

--- a/src/Standard/lithium.ini
+++ b/src/Standard/lithium.ini
@@ -5,7 +5,7 @@
 line_endings = "\n"
 indentation = "\t"
 extensions = php
-skip = /*.txt.php, /*.html.php, /*.xml.php
+skip = /*.txt.php, /*.html.php, /*.xml.php, /*app/resources/*
 
 ; File
 [NoCarriageReturnsRule]
